Fixed extra space on right mobile view

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -253,10 +253,10 @@ hr {
 	padding-top:80px;
 	z-index:3;
 	top:50%;
-	width:320;
+	width:290;
 	height:90;
 	left:50%;
-	margin-left:-130;
+	margin-left:-135;
 	position:absolute;
 }
 
